# griot-and-grits-backend

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  file.ipynb  fly.toml  openapi.json  pyproject.toml  requirements.txt  test_globus_auth.py
.github/workflows/: build-and-deploy.yml  fly-deploy.yml
app/: factory.py  server.py
app/api/: __init__.py  artifacts.py  collections.py  preservation.py
app/config/: __init__.py  settings.py
app/models/: __init__.py  base.py  collection.py  ingestion.py  metadata.py  pager.py
app/services/: __init__.py  collection_service.py  db.py  fixity_service.py  globus_service.py  ingestion_service.py  metadata_service.py  preservation_event_service.py  storage_location_service.py  transcription.py
npm/gng-client/: runtime.ts
npm/gng-client/.openapi-generator/: FILES
npm/gng-client/apis/: ArtifactsApi.ts  DefaultApi.ts  index.ts
npm/gng-client/models/: AIContribution.ts  AISpecificMetadata.ts  ArchivalInfo.ts  Artifact.ts  AudioMetadata.ts  ContentInfo.ts  Duration.ts  HTTPValidationError.ts  Licensing.ts  Meta.ts  ValidationError.ts  ValidationErrorLocInner.ts  VideoMetadata.ts  index.ts
src/: __init__.py  metadata_service.py  object_storage.py
src/gng_backend/: server.py
src/gng_backend/models/: metadata.py
src/gng_backend/services/: __init__.py  metadata_service.py
src/models/: __init__.py  metadata.py
tests/test_api/: test_object_storage.py
