[project]
name = "gng-backend"
version = "0.1.0"
description = "Digital preservation system for cultural heritage artifacts"
authors = [
    {name = "syntaxsdev", email = "sglinton@redhat.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "motor>=3.6.0",
    "pymongo>=4.11.0",
    "minio>=7.2.15",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "globus-sdk>=3.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
